Add New Section(information) to Portfolio

--- a/index.html
+++ b/index.html
@@ -25,12 +25,63 @@
             <button type="button" class="btn btn-danger">Contact me</button>
             </div>
         </section>
-        <h5>summary</h5>
+        <h5><i class="bi bi-person"></i>  summary</h5>
         <section id="summary" class="container">
             <p>
                 Développeur Front End expérimenté, compétent en HTML, CSS, JavaScript et React. Reconnu pour sa forte collaboration en équipe, son adaptabilité et sa capacité à fournir des résultats de haute qualité. Expert dans la création d'interfaces utilisateur intuitives et l'amélioration de l'expérience utilisateur. Fiable, flexible et motivé par une passion pour les technologies web innovantes.
             </p>
         </section>
+        <h5><i class="bi bi-heart"></i> Overview </h5>
+        <section id="overview" class="container">
+            <h1>3</h1><h3> Years of professional experience</h3>
+        </section>
+        <h5><i class="bi bi-briefcase"></i> work history</h5>
+        <section id="history" class="container">
+            <div class="icon">
+                <i class="bi bi-briefcase"></i>
+            </div>
+            <div class="work">
+                <h4>Mail Agent</h4>
+                <p>Mailer</p>
+                <p>09.2023-Current</p>
+            </div>
+        </section>
+        <section id="history" class="container">
+            <div class="icon">
+                <i class="bi bi-briefcase"></i>
+            </div>
+            <div class="work">
+                <h4>Développeur Frontend</h4>
+                <p>Stagiaire</p>
+                <p>05.2023 - 06.2023</p>
+            </div>
+            <div class="description"><a href="">Show Description</a></div>
+        </section>
+
+        <section id="history" class="container">
+            <div class="icon">
+                <i class="bi bi-briefcase"></i>
+            </div>
+            <div class="work">
+                <h4>Développeur Frontend</h4>
+                <p>Stagiaire</p>
+                <p>05.2022 - 06.2022</p>
+            </div>
+            <div class="description"><a href="">Show Description</a></div>
+        </section>
+        <h5><i class="bi bi-book"></i> Education</h5>
+        <section id="history" class="container">
+            <div class="icon">
+                <i class="bi bi-book"></i>
+            </div>
+            <div class="Education">
+                <h4>L'enseignement Supérieur - Développement D'applications D'information</h4>
+                <p>Classe De Préparation Du Brevet De Technicien Supérieur</p>
+                <p>Ouarzazate, Morocco</p>
+                <p>05.2001 -</p>
+            </div>
+        </section>
+        
 
 
 
