add section+icon of skills

--- a/index.html
+++ b/index.html
@@ -78,10 +78,34 @@
                 <h4>L'enseignement Supérieur - Développement D'applications D'information</h4>
                 <p>Classe De Préparation Du Brevet De Technicien Supérieur</p>
                 <p>Ouarzazate, Morocco</p>
-                <p>05.2001 -</p>
+                <p>06.2023</p>
             </div>
         </section>
-        
+        <section id="history" class="container">
+            <div class="icon">
+                <i class="bi bi-book"></i>
+            </div>
+            <div class="Education">
+                <h4>High School Diploma </h4>
+                <p>Baccalauréat</p>
+                <p>Ouarzazate, Morocco</p>
+                <p>06.2022 </p>
+            </div>
+        </section>
+        <h5><i class="bi bi-check-square"></i> Skills</h5>
+        <section class="container skills">
+            <i style="display: inline;" class="bi bi-check-square"></i>
+            <p>Javascript</p>
+            <p>CSS</p>
+            <p>HTML</p>
+            <p>Front end web developement</p>
+            <p>Problem-solving</p>
+            <p>CSS proficiency</p>
+            
+        </section>
+
+        <!-- time line  -->
+
 
 
 
